# proyecto_adopcion_digital

./: .gitignore  BASE.ipynb  pyproject.toml
